--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "leaflet/dist/leaflet.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -8,4 +10,11 @@ html,
 body {
   height: 100%;
   font-family: "Roboto", sans-serif;
+  background-color: rgb(250, 250, 250);
+}
+
+.leaflet-container {
+  height: 500px;
+  width: 100%;
+  border-radius: 12px;
 }
